# mkbcfnt

./: .gitignore  Makefile.am  README  README.md  configure.ac  out.bcfnt
include/: bcfnt.hpp
source/: bcfnt.cpp  main.cpp
